# gritty

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  COMPARISON.md  KEYBINDINGS.md
scripts/: gate.ps1  install.ps1  release.ps1  stress.ps1  uninstall.ps1
src/: agent.rs  app.rs  background.rs  clipboard.rs  color.rs  config.rs  font.rs  fuzzy.rs  input.rs  key.rs  layout.rs  main.rs  memguard.rs  overview.rs  paint.rs  palette.rs  persist.rs  proc.rs  pty.rs  render.rs  session.rs  term.rs  watchdog.rs
