[package]
name = "gritty"
version = "0.1.0"
edition = "2021"
description = "A lightweight native Windows terminal"

[dependencies]
winit = "0.30"
softbuffer = "0.4"
fontdue = "0.9"
portable-pty = "0.9"
anyhow = "1"
alacritty_terminal = "0.25"
arboard = { version = "3", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Diagnostics_ToolHelp", "Win32_System_Threading", "Win32_System_ProcessStatus", "Win32_Security", "Win32_Foundation", "Win32_Graphics_Dwm", "Win32_UI_WindowsAndMessaging"] }

[build-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
ico = "0.3"
winresource = "0.1"

[profile.release]
opt-level = 3
lto = true
strip = true
panic = "abort"
